--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Pasta Cosi Restaurant</title>
     
-
+   <!--chandrika-->
     <!-- Favicons -->
     <link href="assets/img/favicon.ico" rel="icon" />
     <link href="assets/img/apple-touch-icon.ico" rel="apple-touch-icon" />
